--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ body {
 }
 
 .playstation_v .accessories .col img {
-      width: 80%;
+      width: 100%;
       opacity: 50%;
       padding: 20px;
 }
@@ -133,5 +133,16 @@ body {
       cursor: pointer;
       
       border-bottom: 1px solid var(--ps_primary_light);
+}
+
+.banner {
+      background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+}
+
+.banner .container > div  {
+      width: 300px;
 }
 /* #endregion main */
