--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,16 +116,42 @@ a {
 }
 
 .nav-item .lens {
-      width: 20px;
+      width: 40px;
       padding: 0 0.15rem;
 }
 
 .header-bottom li {
       padding: 0.15rem;
 }
+
+
+.arrow {
+      width: 30px;
+      padding: 0.5rem;
+}
+
+.dropdown_menu img {
+      width: 150px;
+      padding: 0.5rem 1rem;
+}
+
+.dropdown_menu li::before {
+      content: "\2022"; 
+      color: var(--ps_primary_light);
+      font-weight: bold;
+      padding:0 0.5rem ;
+}
+
+.nav-link:active .nav_bottom {
+      display: block;
+}
 /* #endregion header */
 
 /* #region main */
+
+main {
+      margin-top: 120px;
+}
 
 .jumbotron .logo_return {
       width: 50%;
@@ -175,7 +201,6 @@ a {
 .new_releases img {
       border-radius: 25px;
 }
-
 
 /* #endregion main */
 
