--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -134,6 +134,13 @@ a {
       padding: 0.5rem;
 }
 
+.nav-link:hover .arrow {
+      transform: rotate(-180deg);
+}
+
+button:hover {
+      box-shadow: inset 0px 0px 1px 3px var(--ps_lightning);
+}
 
 .nav-item.dropdown {
       position: static;
@@ -197,6 +204,7 @@ main {
 }
 
 
+
 .fs_10 {
       font-size: 10px;
 }
@@ -206,7 +214,11 @@ main {
 }
 
 
-
+.games .col img:hover {
+      padding: 2px;
+      border: 1px solid var(--ps_primary_light);
+      cursor: pointer;
+}
 
 .playstation_v .accessories .col img {
       width: 100%;
@@ -214,7 +226,12 @@ main {
       padding: 20px;
 }
 
-
+.playstation_v .accessories .col img:hover {
+      opacity: 100%;
+      cursor: pointer;
+      
+      border-bottom: 1px solid var(--ps_primary_light);
+}
 
 .banner {
       background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
