--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,20 +192,25 @@ main {
       margin-top: 120px;
 }
 
-.jumbotron .logo_return {
-      width: 50%;
+
+
+.jumbotron {
+      background-image: url(../img/jumbo-bg.png);
+      background-position: center top;
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 600px;
+      display: flex;
+      align-items: flex-end;
 }
 
 
-.fs_10 {
-      font-size: 10px;
+.jumbotron .card {
+      max-width: 400px;
+      color: var(--ps_light);
+      background: none;
+      margin-bottom: 2rem;
 }
-
-.fs_h3 {
-      font-size: 25px;
-}
-
-
 
 
 .playstation_v .accessories .col img {
