--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -199,18 +199,22 @@ main {
       margin-top: 120px;
 }
 
-.jumbotron .logo_return {
-      width: 50%;
+.jumbotron {
+      background-image: url(../img/jumbo-bg.png);
+      background-position: center top;
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 600px;
+      display: flex;
+      align-items: flex-end;
 }
 
 
-
-.fs_10 {
-      font-size: 10px;
-}
-
-.fs_h3 {
-      font-size: 25px;
+.jumbotron .card {
+      max-width: 400px;
+      color: var(--ps_light);
+      background: none;
+      margin-bottom: 2rem;
 }
 
 
