add page login bonus

--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -105,6 +105,10 @@ a {
 /* #endregion Debug */
 
 /* #region header */
+header {
+      box-shadow: 0px 10px 10px 5px var(--ps_darker) ;
+
+}
 
 .header-top img {
       width: 100px;
@@ -163,6 +167,8 @@ a {
       background-color: var(--ps_light);
       border: none;
       border-radius: 0;
+      box-shadow: 0px 10px 5px 4px var(--ps_darker) ;
+      transition: 1s;
 }
 
 .dropdown-menu img {
