--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -247,21 +247,17 @@ main {
 
 .carousel-indicators {
       position: static;
-      display: flex;
-      justify-content: center;
+      justify-content: space-between;
       padding: 0;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       list-style: none;
-      gap: 1rem;
       flex-wrap: wrap;
 }
 
 .carousel-indicators [data-bs-target] {
       box-sizing: border-box;
-      flex: 0 1 auto;
-      padding: 2px;
-      width: 200px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       text-indent: 0;
       cursor: pointer;
       background-color: transparent;
@@ -277,25 +273,26 @@ main {
       border: none;
 }
 
-.jumbotron .card .btn:hover,
+#jumbotron .card .btn:hover,
 .banner button:hover,
 .playstation_plus button:hover,
 .playstation_now button:hover {
       box-shadow: inset 0px 0px 0px 3px #000000;
 }
 
-/* #endregion jumbotron */
-
-
-/* .games .col img {
+.games .col img {
       transition: 0.2s 0s linear;
       padding: 2px ;
 }
-.games .col:hover img { 
+.games .col:hover img{ 
       border: 2px solid var(--ps_primary_light);
       cursor: pointer;
       margin-top: -2rem;
-} */
+}
+
+/* #endregion jumbotron */
+
+
 
 
 
